--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <ul class="mainmenu">
         {% for m in menu %}
         <li>
-            <a href="{{ url_for(m['url']) }}">{{ m['name'] }}</a>
+            <a href="{{ url_for(m['url']) }}">{{ m['title'] }}</a>
         </li>
         {% endfor %}
     </ul>
