--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,11 @@
 <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
 <form action="/login" method="post" class="form-contact">
-    <p><label>Логин: </label><input type="text" name="username" value="" required /></p>
-    <p><label>Пароль: </label><input type="password" name="password" value="" required /></p>
+    <p><label>Email: </label><input type="text" name="email" value="" required /></p>
+    <p><label>Пароль: </label><input type="password" name="psw" value="" required /></p>
+    <p><input type="checkbox" name="remainme">Запомнить меня
     <p><input type="submit" value="Войти" /></p>
+    <hr align="left" width="300px">
+    <p><a href="{{ url_for('register') }}">Регистрация</a></p>
 </form>
 {% endblock %}
